[gd_scene load_steps=3 format=3 uid="uid://cia3f40dd5ob0"]

[ext_resource type="Script" path="res://rus_commit/script/sign_up_script.gd" id="1_t7m5k"]

[sub_resource type="LabelSettings" id="LabelSettings_d642p"]
font_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7m5k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.959387, 0.957962, 0.956162, 1)

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 306.0
offset_top = -21.0
offset_right = -306.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="username" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Type the username"
alignment = 1

[node name="password" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Type the password"
alignment = 1
secret = true

[node name="sign_up_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Sign up"

[node name="FeedbackText" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.863388, 0.355126, 0.0720554, 1)
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Already have an account?"
label_settings = SubResource("LabelSettings_d642p")
horizontal_alignment = 1

[node name="log_in_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Log in
"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="VBoxContainer/sign_up_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/log_in_button" to="." method="_on_log_in_button_pressed"]
